<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:id="@+id/radio_pages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/pages"
            style="@style/text_blue_min"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/chose_home_logo"
            android:text="@string/frist_pages"
            android:textColor="@drawable/selector_main_tab"
            />

        <RadioButton
            android:id="@+id/dynamic"
            style="@style/text_blue_min"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/chose_dynamc_logo"
            android:text="@string/dynamic_condition"
            android:textColor="@drawable/selector_main_tab" />

        <RadioButton
            android:id="@+id/publish"
            style="@style/text_blue_min"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/chose_publish_logo"
            android:text="@string/issue"
            android:textColor="@drawable/selector_main_tab" />

        <RadioButton
            android:id="@+id/news"
            style="@style/text_blue_min"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/chose_news_logo"
            android:text="@string/news"
            android:textColor="@drawable/selector_main_tab" />
        <RadioButton
            android:id="@+id/mine"
            style="@style/text_blue_min"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/chose_my_logo"
            android:text="@string/mine"
            android:textColor="@drawable/selector_main_tab" />
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/radio_pages"
        android:background="@color/grays" />

    <FrameLayout
        android:id="@+id/fra_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/radio_pages"
        android:layout_marginBottom="1dip"
        ></FrameLayout>
    
</RelativeLayout>