<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/font_hight_title"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/regs_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left|center"
            android:background="@drawable/arrowleft"
            android:clickable="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/regs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/col_green"
            android:textSize="18dp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/regs_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_hight_title"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxEms="13"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grays"></View>

                <EditText
                    android:id="@+id/regs_paw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_hight_title"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grays"></View>

                <EditText
                    android:id="@+id/regs_newPaw"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_hight_title"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/regs_paw"
                    android:maxLines="1"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grays"></View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/regs_issue"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/font_hight_title"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:hint="@string/verification_code"
                        android:maxLines="1"
                        android:textSize="16dp" />

                    <Button
                        android:id="@+id/btn_issue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@id/regs_issue"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/login_btn_xml"
                        android:padding="10dp"
                        android:text="@string/ver_code"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_regs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/interest_man" />

                    <Button
                        android:id="@+id/p_trade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/login_btn_xml"
                        android:padding="10dp"
                        android:text="@string/trade"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:visibility="gone" />

                </LinearLayout>

                    <LinearLayout
                        android:id="@+id/imaghe_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"></LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grays"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/interest_thing" />

                    <Button
                        android:id="@+id/t_trade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/login_btn_xml"
                        android:padding="10dp"
                        android:text="@string/trade"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:visibility="gone" />

                </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tags_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/login_btn_xml"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
