<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include layout="@layout/top_title"></include>

    <RelativeLayout
        android:id="@+id/material_icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/material_icon"
            android:textColor="@color/col_bg"
            android:textSize="16dp" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/material_icon_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            fresco:roundBottomLeft="true"
            fresco:roundBottomRight="true"
            fresco:roundedCornerRadius="25dp"
            fresco:roundingBorderColor="@color/white"
            fresco:roundingBorderWidth="1dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/material_nick_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/text_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:text="@string/material_nick"
            android:textColor="@color/col_bg"
            android:textSize="16dp"

            />


        <TextView
            android:id="@+id/text_material_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/text_nick"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16dp" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/material_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:text="@string/material_gender"
            android:textColor="@color/col_bg"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_material_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/material_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:text="@string/material_location"
            android:textColor="@color/col_bg"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/text_material_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/material_personalized_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:text="@string/material_personalized"
            android:textColor="@color/col_bg"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_material_personalized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="cdscdcdcd"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>