<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/my_image_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></com.facebook.drawee.view.SimpleDraweeView>

        <LinearLayout
            android:id="@+id/my_image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/my_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                fresco:roundBottomLeft="true"
                fresco:roundBottomRight="true"
                fresco:roundedCornerRadius="30dp"
                fresco:roundingBorderColor="@color/white"
                fresco:roundingBorderWidth="1dp" />


            <TextView
                android:id="@+id/my_nice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxEms="15"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18dp" />


        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/my_material_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/material"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_sellerl_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_sellerl" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/seller"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_sellerl_layout_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_sellerl" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/seller_detials"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_sellerl_layout_shop_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shop_buy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/shop_buy"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/my_buy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_buy" />

                <TextView
                    android:id="@+id/buy_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/buy"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_publish_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_publish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/publish"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_collect_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_collect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/collect"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_site_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_site" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/site"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_install_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_install" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/install"
                    android:textColor="@color/col_bg"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>